# TrueCraft

./: .env  .env.example  .replit  TrueCraft.py  app.py  pyproject.toml  replit.md  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
locales/: ar.json  bn.json  de.json  en.json  es.json  fr.json  gu.json  hi.json  it.json  ja.json  ko.json  mr.json  pt.json  ru.json  ta.json  te.json  zh.json
pages/: 1_Product_Listings.py  2_Artisan_Profile.py  3_Analytics.py  4_Messages.py  5_Support.py  6_Voice_Onboarding.py
utils/: ai_assistant.py  ai_ui_components.py  auth_manager.py  config.py  data_manager.py  database_factory.py  database_manager.py  db_engine.py  db_models.py  db_service.py  i18n.py  image_handler.py
