[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "streamlit-authenticator>=0.4.2",
    "streamlit>=1.49.1",
    "python-jose>=3.5.0",
    "requests-oauthlib>=2.0.0",
    "authlib>=1.6.3",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uv>=0.8.19",
]
